Sem4/ROS/log/build_2023-05-19_11-21-49/inverse_kinematics/stdout_stderr.log
running egg_info
writing ../../build/inverse_kinematics/inverse_kinematics.egg-info/PKG-INFO
writing dependency_links to ../../build/inverse_kinematics/inverse_kinematics.egg-info/dependency_links.txt
writing entry points to ../../build/inverse_kinematics/inverse_kinematics.egg-info/entry_points.txt
writing requirements to ../../build/inverse_kinematics/inverse_kinematics.egg-info/requires.txt
writing top-level names to ../../build/inverse_kinematics/inverse_kinematics.egg-info/top_level.txt
reading manifest file '../../build/inverse_kinematics/inverse_kinematics.egg-info/SOURCES.txt'
writing manifest file '../../build/inverse_kinematics/inverse_kinematics.egg-info/SOURCES.txt'
running build
running build_py
copying inverse_kinematics/client.py -> /workspace/build/inverse_kinematics/build/lib/inverse_kinematics
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /workspace/build/inverse_kinematics/build/lib/inverse_kinematics/client.py -> /workspace/install/inverse_kinematics/lib/python3.10/site-packages/inverse_kinematics
byte-compiling /workspace/install/inverse_kinematics/lib/python3.10/site-packages/inverse_kinematics/serv.py to serv.cpython-310.pyc
  File "/workspace/install/inverse_kinematics/lib/python3.10/site-packages/inverse_kinematics/serv.py", line 17
    theta1 = # Perform your calculations here based on goal_msg.x, goal_msg.y, goal_msg.l1, goal_msg.l2
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

byte-compiling /workspace/install/inverse_kinematics/lib/python3.10/site-packages/inverse_kinematics/client.py to client.cpython-310.pyc
running install_data
running install_egg_info
removing '/workspace/install/inverse_kinematics/lib/python3.10/site-packages/inverse_kinematics-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/inverse_kinematics/inverse_kinematics.egg-info to /workspace/install/inverse_kinematics/lib/python3.10/site-packages/inverse_kinematics-0.0.0-py3.10.egg-info
running install_scripts
Installing client script to /workspace/install/inverse_kinematics/lib/inverse_kinematics
Installing server script to /workspace/install/inverse_kinematics/lib/inverse_kinematics
writing list of installed files to '/workspace/build/inverse_kinematics/install.log'
